--- a/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -7,6 +7,6 @@
 <body>
 Goodbye!
 
-<a href="first/hello">Say hello</a> or <a href="/exit">Exit</a>
+<a href="/">Back to congrats</a> or <a href="/first/hello">Say hello</a> or <a href="/second/exit">Exit</a>
 </body>
 </html>
