--- a/src/frontend/src/app/find-f/find-f.component.css
+++ b/src/frontend/src/app/find-f/find-f.component.css
@@ -1,8 +1,59 @@
-*{
-    margin:  20px 20px 20px 20px;
+.animals-container {
+  padding: 20px;
 }
 
-body {
-   width: 100%;
-   height:100vh ;
+.animal-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.animal-card {
+  width: 200px; /* Ширина картки */
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.2s;
+  overflow: hidden; /* Сховати все, що виходить за рамки картки */
+  position: relative; /* Для позиціонування зображення */
+}
+
+.animal-card img {
+  width: 100%; /* Зображення займатиме всю ширину картки */
+  height: auto; /* Зберігати пропорції зображення */
+  object-fit: cover; /* Змінює розмір зображення, щоб заповнити рамку */
+}
+
+.animal-card:hover {
+  transform: scale(1.05); /* Збільшення картки при наведенні */
+}
+
+.pagination {
+  margin-top: 20px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+}
+
+.close-button {
+  cursor: pointer;
+  float: right;
+  font-size: 28px;
 }
