--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -1,5 +1,10 @@
 
 <header>
+  <div class="LinkIcon">
+    <a href="" >
+      <img class="img" src="/click_logo.jpg" alt="FF_LOGO"/>
+    </a>
+  </div>
 <!--  <h1>Головна сторінка</h1>-->
   <nav>
     <ul>
@@ -19,11 +24,7 @@
   </div>
 </header>
 
-<div class="LinkIcon">
-  <a href="" >
-    <img src="../../public/FFLogo.png" alt="FFLOGO"/>
-  </a>
-</div>
+
 
 
 <router-outlet></router-outlet>
