--- a/src/frontend/src/app/about/about.component.css
+++ b/src/frontend/src/app/about/about.component.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   justify-content: center;
   background: linear-gradient(135deg, #ffffff, #f2f2f2);
-  font-family: Arial, sans-serif;
+  font-family:'e-ukr';
   color: #333;
 }
 /* 
@@ -44,7 +44,8 @@ body {
   text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
 } */
 
-.Title1{
+/* 
+.Title2{
   text-align: center;
   padding: 20px;
   border-radius: 15px;
@@ -53,16 +54,94 @@ body {
   animation: fadeIn 1.5s ease-in-out;
   width: 100%;
 
-}
+} */
 
-
-.Title1 h1{
+/* .Title2 h1{
   font-size: 2em;
   text-align: center;
   padding: 25px;
+  color: #000000;
   border-radius: 15px;
-    color: #000000;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+  animation: fadeIn 1.5s ease-in-out;
+  width: 100%;
+  height: 15%;
+} */
 
+/* .Title2 p{
+  font-size: 25px;
+  text-align: center;
+  padding: 30px;
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  animation: fadeIn 1.5s ease-in-out;
+  width: 100%;
+  height: 75%;
+  
+} */
+/* .Title3{
+  text-align: center;
+  padding: 30px;
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  animation: fadeIn 1.5s ease-in-out;
+  width: 100%;
+
+} */
+
+/* .Title3 h1{
+  font-size: 2em;
+  text-align: center;
+  color: #000000;
+  padding: 30px;
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+  animation: fadeIn 1.5s ease-in-out;
+  width: 100%;
+  height: 15%;
+} */
+
+/* .Title3 p{
+  font-size: 25px;
+  text-align: center;
+  padding: 30px;
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  animation: fadeIn 1.5s ease-in-out;
+  width: 100%;
+  height: 75%;
+
+} */
+
+
+.Title1, .Title2,.Title3 {
+  
+  text-align: center;
+  padding: 20px;
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  animation: fadeIn 1.5s ease-in-out;
+  width: 100%;
+  height: 800px;
+
+}
+
+
+.Title1 h1,.Title2 h1,.Title3 h1{
+  font-size: 2em;
+  text-align: center;
+  padding: 25px;
+  padding-top: 35px;
+  color: #000000;
+  border-radius: 15px;
   background: rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
@@ -71,7 +150,7 @@ body {
   height: 15%;
 }
 
-.Title1 p{
+.Title1 p,.Title2 p ,.Title3 p{
   line-height: 1.4;
   font-size: 25px;
   text-align: center;
@@ -85,80 +164,6 @@ body {
   
 }
 
-.Title2{
-  text-align: center;
-  padding: 20px;
-  border-radius: 15px;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 600px;
-}
-
-.Title2 h1{
-  font-size: 2em;
-  text-align: center;
-  padding: 25px;
-  color: #000000;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 15%;
-}
-
-.Title2 p{
-  font-size: 25px;
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 75%;
-  
-}
-.Title3{
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-
-}
-
-.Title3 h1{
-  font-size: 2em;
-  text-align: center;
-  color: #000000;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 15%;
-}
-
-.Title3 p{
-  font-size: 25px;
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 75%;
-
-}
 
 
 
