--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -5,21 +6,20 @@
 }
 
 body {
+   
     width: 100%;
     height: 100vh;
-    font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     color: #333;
 }
 
 header {
-    background-color: #fc9b00;
+    background-color: #fc8f00;
     padding: 20px;
     text-align: center;
     color: white;
     display: flex;
-    justify-content: flex-end;
-   
+  
 
 }
 
@@ -29,13 +29,16 @@ h1 {
 }
 
 nav {
+    font-family: "e-ukr";
     margin: 20px auto;
     text-align: center;
+    margin-right: 50px;
+    
 }
 
 nav ul {
     list-style-type: none;
-    
+
 }
 
 nav ul li {
@@ -48,12 +51,12 @@ nav ul li a {
     text-decoration: none;
     color: #ffffff;
     font-size: 1.2rem;
-   
+
 }
 
 nav ul li a:hover {
     color: #000000;
-    transition: 0.6s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 footer {
@@ -83,8 +86,8 @@ footer {
 
 .LinkIcon {
     position: absolute;
-    top: 32px;
-    left: 40px;
+    top: 8px;
+    left: 180px;
 }
 .found {
     display: block;
@@ -116,6 +119,7 @@ input[type="text"] {
 }
 
 .Regg{
+    font-family: "e-ukr";
  display: flex;
  justify-content:center;
  align-items: center;
@@ -132,30 +136,29 @@ input[type="text"] {
 .Enter:hover{
     text-decoration: none;
     color: #000000;
-    transition: 0.6s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 .Registr{
+    border-radius: 15px;
+    background-color: #f4f4f4;
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
     font-size: 1.2rem;
     margin-left: 10px;
+    padding: 10px;
 
 }
 
 .Registr:hover{
+    background-color: #000000;
     text-decoration: none;
-    color: #000000;
-    transition: 0.6s ease-in-out;
-
+    color: #f4f4f4;
+    transition: 0.2s ease-in-out;
 
 }
 
 .img{
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
-}
-.slash{
-
+  width: 120px;
+  height: 120px;
 }
