--- a/src/frontend/src/app/blog-and-news/blog-and-news.component.css
+++ b/src/frontend/src/app/blog-and-news/blog-and-news.component.css
@@ -8,7 +8,7 @@ body{
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg, #ffffff, #f2f2f2);
-    font-family: Arial, sans-serif;
+    font-family: "e-ukr";
   }
 
 .Blog {
@@ -48,7 +48,7 @@ body{
 }
 
 .News {
-  padding: 20px;
+  padding: 40px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
@@ -59,7 +59,7 @@ body{
 .News h1{
   background: rgba(0, 0, 0, 0.1);
     text-align:  center;
-    padding: 20px 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
     border-radius: 15px;
     margin-bottom: 20px;
     
