--- a/src/frontend/src/styles.css
+++ b/src/frontend/src/styles.css
@@ -1,1 +1,7 @@
 
+@font-face {
+    font-family: 'e-ukr';
+    src: url('/fonts/e-Ukraine-Medium.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
