Додав форму для усиновлення, для волонтерства.Зробив головну сторіку. Адаптував під всі пристрої навігаційну панель.

--- a/src/frontend/src/app/about/about.component.html
+++ b/src/frontend/src/app/about/about.component.html
@@ -24,7 +24,6 @@
   <h1>Навіщо Find a Friend </h1>
   <p>У сучасних умовах, коли кількість безпритульних тварин в Україні стрімко зростає, важливо мати ефективні інструменти для їх усиновлення та підтримки притулків.
     Find a Friend допомагає людям швидко і зручно знаходити тварин, готових до нової домівки, та надає можливість підтримати притулки в їхній важливій роботі. </p>
-  
 </div>
 
 <div class="Title2">
@@ -43,8 +42,14 @@
 
 </div>
 
-<div class="WorldTitle">
- </div>
-
+<!-- <div class="Developer">
+   <h1>Потужна потужність</h1>
+   <p>
+    Програміст 1.
+    Програміст 2.
+    Програміст 3.
+    Програміст 4.
+   </p>
+  </div> -->
 </body>
 </html>
