--- a/src/frontend/src/app/donate/donate.component.html
+++ b/src/frontend/src/app/donate/donate.component.html
@@ -10,9 +10,16 @@
 <body>
 
   
-  <div class="container">
+  <!-- <div class="container">
     <input type="text" id="name" name="name" placeholder="Введіть назву притулка">
     <button class="Don">Задонатити</button>
+  </div> -->
+
+ 
+  <div class="card">
+    <form action="" method="post" class="card-form">
+        
+    </form>
   </div>
 
   <div class="Prozoro">
