--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -3,14 +3,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
+
 
 body {
    
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #f4f4f4;
     color: #333;
+  
 }
 
 header {
@@ -38,11 +41,16 @@ nav {
 
 nav ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display:  flex;
+    align-items: center;
+    justify-items: center;
 
 }
 
-nav ul li {
-    display: inline;
+nav ul .Descktop .nav-item {
+    display: inline-block;
     margin: 0 15px;
     margin-left: 30px;
 }
@@ -67,62 +75,82 @@ footer {
     color: white;
 }
 
-.map-container {
-    display: flex;
-    flex-direction: column; /* Додано, щоб елементи розташовувались вертикально */
-    justify-content: center;
-    align-items: center;
-    height: auto; /* Змініть на auto, щоб містився вміст */
-}
-
-.map-container ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.map-container li {
-    text-align: center;
-}
-
 .LinkIcon {
     position: absolute;
     top: 8px;
-    left: 180px;
+    left: 100px;
 }
-.found {
+
+.LinkIconPhone {
+    position: absolute;
+    top: 8px;
+    left: 230px;
+}
+
+/* .map-container {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    height: auto; 
+} */
+
+/* .map-container ul {
+    list-style-type: none;
+    padding: 0;
+} */
+
+/* .map-container li {
+    text-align: center;
+} */
+
+
+/* .found {
     display: block;
-    margin-top: 20px; /* Відстань між картою і повідомленням */
-    text-align: center; /* Центрувати текст */
+    margin-top: 20px; 
+    text-align: center; 
     font-size: larger;
 
-}
+} */
 
-input[type="text"] {
-    width: 10%; /* Зробити поле введення на всю ширину */
-    padding: 10px; /* Внутрішній відступ для кращого вигляду */
-    margin-top: 5px; /* Відстань між label і полем введення */
-    margin-bottom: 10px; /* Відстань після поля введення */
+/* input[type="text"] {
+    width: 10%; 
+    padding: 10px;
+    margin-top: 5px; 
+    margin-bottom: 10px; 
+} */
 
-
-}
-
-.foundMAp {
+/* .foundMAp {
     padding: 10px 20px;
     cursor: pointer;
 
-}
-.foundMAp:hover {
+} */
+
+/* .foundMAp:hover {
     padding: 10px 20px;
     cursor: pointer;
     background-color: tomato;
 
-}
+} */
 
 .Regg{
-    font-family: "e-ukr";
+
+ font-family: "e-ukr";
  display: flex;
  justify-content:center;
  align-items: center;
+
+ 
+}
+
+.ReggPhone {
+ font-family: "e-ukr";
+ display: flex;
+ justify-content:center;
+ align-items: center;
+ margin-top: 40px;
+ margin-left: 20px;
+ 
 }
 
 .Enter{
@@ -130,6 +158,7 @@ input[type="text"] {
     color: #ffffff;
     font-size: 1.2rem;
     margin-right: 10px;
+
 
 }
 
@@ -162,3 +191,275 @@ input[type="text"] {
   width: 120px;
   height: 120px;
 }
+
+.imgPhone{
+    width: 60px;
+    height: 60px;
+  }
+
+.btn-close{
+    margin-right: 20px;
+    margin-top: -30px;
+    size: 55px;
+}
+
+.navbar-toggler-icon{
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+}
+
+.offcanvas-header{
+ color: #000000;
+ background-color: #fc8f00;
+}
+
+.offcanvas-header h2{
+  font-family: "e-ukr";
+  margin-top:20px ;
+  margin-left:30px ;
+  margin-bottom:35px ;   
+}
+
+.offcanvas-body {
+ background-color: #fc8f00;
+}
+
+
+.Phone_and_Tablet .nav-item .nav-link{
+    margin-bottom: 20px;
+}
+
+@media (min-width: 992px) and (max-width: 1470px) {
+   .navbar {
+    display: flex;
+    align-items: center;
+    padding-left: 70px;
+   }
+
+   .LinkIcon {
+    position: absolute;
+    top: 8px;
+    left: -12px;
+}
+}
+
+.alltext{
+    font-family: "e-ukr";
+    margin-left: 30px;
+    margin-right: 15px;
+}
+
+.rl{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   margin-top: 30px;
+}
+.rl a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.2rem;  
+    background-color: hwb(34 0% 1%);
+    border-radius: 8px;
+    display: flex;
+    width: 210px;
+    height:40px;
+    padding-left: 33px;
+    padding-top: 4px;
+    
+    
+   
+}
+
+.rl a:hover{
+    background-color: rgb(230, 130, 0);
+    transition: 0.2s ease-in-out;
+}
+
+
+.step{
+  position: relative;  
+}
+.step h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.steptext{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 55%;
+    margin: 0 auto;
+}
+
+.dog {
+  position: relative;   
+}
+.dog img{
+  position: absolute;
+  top: -60px
+}
+
+.paw{
+    position: absolute;
+    top: 780px;
+    left: 100px;
+    transform: rotate(30deg); 
+}
+
+.paw img{
+    width: 120px;
+    height: 120px;
+}
+
+.paw1{
+    position: absolute;
+    top: 830px;
+    left: -30px;
+    transform: rotate(30deg); 
+}
+
+.paw1 img{
+    width: 120px;
+    height: 120px;
+}
+
+
+.paw2{
+    position: absolute;
+    top: 200px;
+    left: 1370px;
+    transform: rotate(-150deg); 
+}
+
+.paw2 img{
+    width: 120px;
+    height: 120px;
+}
+
+
+.paw3{
+    position: absolute;
+    top: 150px;
+    left: 1470px;
+    transform: rotate(-150deg); 
+}
+
+.paw3 img{
+    width: 120px;
+    height: 120px;
+}
+
+.cat{
+  position: absolute;
+  top: 370px;
+  left: 880px;
+}
+.cat img{
+    width: 350px;
+    height: 200px;
+}
+
+.list{
+    margin-bottom: 80px;
+    
+}
+.list h1{
+   text-align: center;
+}
+.listtext{
+    text-align: center;
+
+}
+.listtext ol {
+    padding-left: 0;
+    list-style-position: inside;
+
+}
+.listtext ol li{
+    margin: 10px 0;
+ }
+
+ .how{
+ margin-bottom: 80px;
+ }
+.how h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+.howtext{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
+    width: 65%;
+    margin: 0 auto;
+    line-height: 0.8cm;
+}
+.find{
+  width: 60%; /* Ширина блоку */
+  margin: 0 auto; /* Центрування по горизонталі */
+  text-align: left; /* Текст вирівняний ліворуч */
+  margin-bottom: 200px;
+  margin-top: 50px;
+}
+
+.find h1{
+    margin-left: -20px;
+}
+.textfind{
+    font-family: 'e-ukrL';
+    line-height: 0.9cm;
+    margin-bottom: 15px;
+    font-size: x-large;
+    
+}
+
+.textfind1{
+    font-family: 'e-ukrL';
+    line-height: 0.9cm;
+    font-size: x-large;
+}
+
+ /* розібратися як працює */
+ /* .nav-item {
+    position: relative;
+    display: inline-block;
+  } */
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Показати випадаюче меню при наведенні */
+  .nav-item:hover .dropdown-content {
+    display: block;
+    border-radius: 10px;
+  }         
+  
+  /* .nav-item:hover .dropbtn {
+    border-radius: 10px;
+    background-color: #ddd;
+    color: black;
+   
+  } */
