--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -1,53 +1,180 @@
 
 <header>
   <div class="LinkIcon">
-    <a href="" >
-      <img class="img" src="/Logo.svg" alt="FF_LOGO"/>
+    <a class="d-none d-lg-block " href="" >
+     <img class="img" src="/Logo.svg" alt="FF_LOGO"/>
     </a>
   </div>
+
 <!--  <h1>Головна сторінка</h1>-->
-  <nav>
-    <ul>
-      <li><a routerLink='/find-f'>Знайти друга</a></li>
-      <li><a routerLink='/free-people'>Волонтерство</a></li>
-      <li><a routerLink='/donate'>Донат</a></li>
-      <li><a routerLink='/about'>Про нас</a></li>
-      <li><a routerLink='/blog-and-news'>Блог та новини</a></li>
 
+  <nav class="navbar navbar-expand-lg" >
 
+    <!-- Button to toggle the sidenav -->
+  <button class="btn btn-light d-block d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidenav" >
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    </ul>
-  </nav>
+<!-- Sidenav (Offcanvas) -->
+    <div class="offcanvas offcanvas-start " tabindex="-1" id="sidenav" aria-labelledby="sidenavLabel" >
 
-  <div class="Regg">
+  <div class="offcanvas-header"> 
+    <div class="LinkIconPhone">
+    <a class="d-block d-lg-none" href="" >
+     <img class="imgPhone" src="/Logo.svg" alt="FF_LOGO"/>
+    </a>
+  </div>
+  
+    <h2 class="title">Find a Friend</h2> 
+    <button class="btn-close"  data-bs-dismiss="offcanvas"> </button>
+  </div>
+
+  
+  <div class="offcanvas-body">
+    <ul class="navbar-nav">
+
+      <div class="Descktop d-none d-lg-block">
+      <li class="nav-item "><a class="nav-link" routerLink='/find-f'>Знайти друга</a></li>
+      <li class="nav-item "><a class="nav-link" >Волонтерство</a>
+        <div class="dropdown-content">
+          <a routerLink="/free-people" >Стати волонтером</a>
+          <a routerLink="/adopt">Усиновити тваринку</a>
+          <a routerLink="/">Допомогти речами</a>
+          <a routerLink="/">Подарувати дім</a>
+        </div>
+      </li>
+      <li class="nav-item "><a class="nav-link" routerLink='/donate'>Донат</a></li>
+      <li class="nav-item "><a class="nav-link" routerLink='/about'>Про нас</a></li>
+      <li class="nav-item "><a class="nav-link" routerLink='/blog-and-news'>Блог та новини</a></li>
+      </div>
+
+      <div class="Phone_and_Tablet d-block d-lg-none ">
+      <li class="nav-item "><a class="nav-link" routerLink='/find-f'>Знайти друга</a></li>
+      <li class="nav-item "><a class="nav-link" (click)="Openmemu()">Волонтерство</a>
+        <div class="dropdown-content" *ngIf="visible">
+          <a routerLink="/free-people" (click)="closeMenu()">Стати волонтером</a>
+          <a routerLink="/adopt" (click)="closeMenu()">Усиновити тваринку</a>
+          <a routerLink="/"(click)="closeMenu()">Допомогти речами</a>
+          <a routerLink="/"(click)="closeMenu()">Подарувати дім</a>
+        </div>
+      </li>
+      <li class="nav-item "><a class="nav-link" routerLink='/donate'>Донат</a></li>
+      <li class="nav-item "><a class="nav-link" routerLink='/about'>Про нас</a></li>
+      <li class="nav-item "><a class="nav-link" routerLink='/blog-and-news'>Блог та новини</a></li>
+      </div>
+
+      
+       <div class="Regg d-none d-lg-block" >
     <a routerLink='/sing-in' class="Enter">Вхід</a>
-
     <a routerLink='/regest' class="Registr">Зареєструватися</a>
   </div>
+
+  <div class="ReggPhone d-block d-lg-none"  >
+    <a routerLink='/sing-in' class="Enter">Вхід</a>
+    <a routerLink='/regest' class="Registr">Зареєструватися</a>
+  </div>
+    </ul>
+  </div>
+  
+</div>
+  </nav>
+  
 </header>
 
+<div class="alltext" *ngIf="isHomePage">
+  <div class="find">
+    <h1>Знайдіть собі друга!</h1>
+    <div class="textfind"> 
+      Ласкаво просимо на наш сайт – платформу, яка допомагає знайти та дати дім тваринам, які потребують турботи та любові.
+    </div>
+    <div class="textfind1">
+      Тут зібрані тварини різного віку, порід та характерів, готові<br> стати частиною вашої родини.
+    </div>
+    
+  
+    </div>
+  <div class="how">
+    <h1>Як це працює?</h1>
+    <div class="howtext">
+        Наш сайт спрощує процес пошуку та знайомства з тваринами, яких ви можете взяти додому.
+    Кожна тварина має докладний профіль з фотографіями, описом, віком та особливостями характеру. 
+    Ви можете відфільтрувати тварин за своїми уподобаннями та знайти того, хто ідеально підійде вашій родині.
+    </div>
+  </div>
 
+  <div class="list">
+     <h1>Чому варто взяти тварину з нашого сайту?</h1>
+    <div class="listtext">
+       <ol>
+      <li>Підтримка тварин, які потребують дому. Ви допомагаєте тваринам отримати новий шанс на щасливе життя.</li>
+      <li>Перевірені профілі. Кожна тварина ретельно перевірена, а профілі регулярно оновлюються.</li>
+      <li>Безпека адаптації. Ми пропонуємо підтримку у період адаптації, щоб ваш новий друг легко звик до нової оселі.</li>
+    </ol> 
+  </div>
+   
+  </div>
+   
+
+  <div class="step"> 
+    <h1>Зробіть крок до нової дружби!</h1>
+    <div class="steptext"> 
+      Перегляньте доступні профілі роботи тварин, яких до того, щоб подарувати їм новий дім та нове щасливе життя. 
+    Разом ми зможемо знайти для них ту турботу, яку вони потребують.
+  </div>
+   
+  </div>
+  <div class="rl"> 
+    <a routerLink='/find-f'>Знайти друга</a>
+  </div>
+
+  <div class="dog">
+    <img class="img-fluid"  src="goldendog.png" alt="Золотистий ретвиллер" >
+  </div>
+
+ 
+  <div class="paw">
+    <img src="paw.png" alt="paw">
+  </div>
+
+  <div class="paw1">
+    <img src="paw.png" alt="paw"  >
+  </div>
+
+  <div class="paw2">
+    <img src="paw.png" alt="paw">
+  </div>
+
+  <div class="paw3">
+    <img src="paw.png" alt="paw">
+  </div>
+  
+  <div class="cat">
+    <img src="redcar.png" alt="cat">
+  </div> 
+
+ </div>
 
 
 <router-outlet></router-outlet>
 
 
-<div class="map-container"  *ngIf="isHomePage">
+<!--  992 -14
+<div class="map-container"  *ngIf="isHomePage"> -->
 
-  <ul>
-    <li>
+  <!-- <ul>
+    <li> -->
       <!-- <h1>Map Shelters</h1>
       <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2600.760062591866!2d28.48674601568897!3d49.233083879325846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d56fa83b9ea47%3A0xef35a1b6538f4a1d!2sRoshen%20Fountain!5e0!3m2!1sen!2sua!4v1696434572887!5m2!1sen!2sua&maptype=satellite"
                 width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>e> -->
 
-    </li>
-  </ul>
+    <!-- </li>
+  </ul> -->
 
   <!-- <label for="name" class="found">Назва притулку:</label>
   <input type="text" id="name" name="name">
   <button class="foundMAp">Шукати</button> -->
-</div>
+<!-- </div> -->
 
 
