--- a/src/frontend/src/app/donate/donate.component.css
+++ b/src/frontend/src/app/donate/donate.component.css
@@ -11,11 +11,22 @@ body {
 }
 
 .container {
+  margin-left: 80px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.Phone{
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+
 
 .Prozoro {
   background-color: #f9f9f9;
@@ -24,6 +35,8 @@ body {
   padding: 20px;
   margin: 20px;
   line-height: 1.6;
+
+ 
 }
 
 .Prozoro h1 {
@@ -33,6 +46,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .Prozoro h2 {
@@ -74,7 +88,7 @@ body {
 
 /* Стиль для кнопки */
 .Don {
-  margin-top: 20px;
+  margin-top: 40px;
   background-color: #d3d3d3;
   color: #333333;
   border: none;
@@ -83,12 +97,45 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
   display: flex;
+  font-size: medium;
+  
 }
 
 .Don:hover {
-  background-color: #c0c0c0;
+  background-color: #a3a3a3;
 }
 
+#name{
+  margin-top: 20px;
+  padding: 20px 20px;
+  border-radius: 15px;
+  font-size: large;
+}
+/* 
+.DPhone {
+  margin-top: 40px;
+  background-color: #d3d3d3;
+  color: #333333;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  font-size: medium;
+  
+}
+
+.DPhone:hover {
+  background-color: #a3a3a3;
+}
+
+#nPhone{
+  margin-top: 20px;
+  padding: 20px 20px;
+  border-radius: 15px;
+  font-size: large;
+} */
 
 .Prozoro h1{
     display:  flex;
