--- a/src/frontend/src/app/free-people/free-people.component.css
+++ b/src/frontend/src/app/free-people/free-people.component.css
@@ -3,6 +3,7 @@
 }
 
 body {
+font-family: "e-ukr";
    width: 100%;
    height:100vh ;
 }
@@ -16,4 +17,34 @@ div>h1{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.volonter{
+   width: 800px;
+   background-color: #ffffff;
+   border-radius: 8px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);    
+   margin: 50px auto;
+}
+
+.formvolonter{
+    display: flex;
+    flex-direction: column;
+}
+.formvolonter h1{
+    text-align: center;
+}
+label{
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+ input ,button{
+    margin-bottom: 15px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+button:hover{
+    background-color: #b5b5b5;
 }
