--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -81,100 +81,29 @@
   
 </header>
 
-<div class="alltext" *ngIf="isHomePage">
-  <div class="find">
-    <h1>Знайдіть собі друга!</h1>
-    <div class="textfind"> 
-      Ласкаво просимо на наш сайт – платформу, яка допомагає знайти та дати дім тваринам, які потребують турботи та любові.
-    </div>
-    <div class="textfind1">
-      Тут зібрані тварини різного віку, порід та характерів, готові<br> стати частиною вашої родини.
-    </div>
-    
-  
-    </div>
-  <div class="how">
-    <h1>Як це працює?</h1>
-    <div class="howtext">
-        Наш сайт спрощує процес пошуку та знайомства з тваринами, яких ви можете взяти додому.
-    Кожна тварина має докладний профіль з фотографіями, описом, віком та особливостями характеру. 
-    Ви можете відфільтрувати тварин за своїми уподобаннями та знайти того, хто ідеально підійде вашій родині.
-    </div>
-  </div>
 
-  <div class="list">
-     <h1>Чому варто взяти тварину з нашого сайту?</h1>
-    <div class="listtext">
-       <ol>
-      <li>Підтримка тварин, які потребують дому. Ви допомагаєте тваринам отримати новий шанс на щасливе життя.</li>
-      <li>Перевірені профілі. Кожна тварина ретельно перевірена, а профілі регулярно оновлюються.</li>
-      <li>Безпека адаптації. Ми пропонуємо підтримку у період адаптації, щоб ваш новий друг легко звик до нової оселі.</li>
-    </ol> 
-  </div>
-   
-  </div>
-   
-
-  <div class="step"> 
-    <h1>Зробіть крок до нової дружби!</h1>
-    <div class="steptext"> 
-      Перегляньте доступні профілі роботи тварин, яких до того, щоб подарувати їм новий дім та нове щасливе життя. 
-    Разом ми зможемо знайти для них ту турботу, яку вони потребують.
-  </div>
-   
-  </div>
-  <div class="rl"> 
-    <a routerLink='/find-f'>Знайти друга</a>
-  </div>
-
-  <div class="dog">
-    <img class="img-fluid"  src="goldendog.png" alt="Золотистий ретвиллер" >
-  </div>
-
- 
-  <div class="paw">
-    <img src="paw.png" alt="paw">
-  </div>
-
-  <div class="paw1">
-    <img src="paw.png" alt="paw"  >
-  </div>
-
-  <div class="paw2">
-    <img src="paw.png" alt="paw">
-  </div>
-
-  <div class="paw3">
-    <img src="paw.png" alt="paw">
-  </div>
-  
-  <div class="cat">
-    <img src="redcar.png" alt="cat">
-  </div> 
-
- </div>
 
 
 <router-outlet></router-outlet>
 
 
-<!--  992 -14
-<div class="map-container"  *ngIf="isHomePage"> -->
 
-  <!-- <ul>
-    <li> -->
-      <!-- <h1>Map Shelters</h1>
+<div class="map-container"  *ngIf="isHomePage">
+
+  <ul>
+    <li>
+      <h1>Map Shelters</h1>
       <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2600.760062591866!2d28.48674601568897!3d49.233083879325846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d56fa83b9ea47%3A0xef35a1b6538f4a1d!2sRoshen%20Fountain!5e0!3m2!1sen!2sua!4v1696434572887!5m2!1sen!2sua&maptype=satellite"
                 width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>e> -->
+                referrerpolicy="no-referrer-when-downgrade"></iframe>e>
 
-    <!-- </li>
-  </ul> -->
+    </li>
+  </ul>
 
   <!-- <label for="name" class="found">Назва притулку:</label>
   <input type="text" id="name" name="name">
   <button class="foundMAp">Шукати</button> -->
-<!-- </div> -->
+</div>
 
 
