--- a/src/frontend/src/app/about/about.component.css
+++ b/src/frontend/src/app/about/about.component.css
@@ -8,197 +8,63 @@
 body {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(135deg, #ffffff, #f2f2f2);
-  font-family:'e-ukr';
+  /* font-family:'e-ukr'; */
+  background-color: #f4f4f4;
   color: #333;
-}
-/* 
-.Title {
-  text-align: center;
-  padding: 40px;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 15px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
-  animation: fadeIn 1.5s ease-in-out;
-}
-
-.Title h1 {
-  font-family: 'Cursive', sans-serif;
-  font-size: 2.5em;
-  color: #fdfd96;
-  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.3);
-  margin-bottom: 20px;
+position: relative;
+overflow-x: hidden;
 }
 
 
-.Title p {
-  font-size: 1.2em;
-  font-family: 'Cursive', sans-serif;
-  line-height: 1.3;
-  color: #3a3a3a;
-  max-width: 600px;
-  margin: 0 auto;
-  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
-} */
-
-/* 
-.Title2{
-  text-align: center;
-  padding: 20px;
-  border-radius: 15px;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-
-} */
-
-/* .Title2 h1{
-  font-size: 2em;
-  text-align: center;
-  padding: 25px;
-  color: #000000;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 15%;
-} */
-
-/* .Title2 p{
-  font-size: 25px;
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 75%;
+.allTitle{
+  margin: 240px auto;
+  display: flex;
   
-} */
-/* .Title3{
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-
-} */
-
-/* .Title3 h1{
-  font-size: 2em;
-  text-align: center;
-  color: #000000;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 15%;
-} */
-
-/* .Title3 p{
-  font-size: 25px;
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 75%;
-
-} */
-
-
+}
 .Title1, .Title2,.Title3 {
-  
   text-align: center;
   padding: 20px;
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 0.9s ease-in-out;
-  width: 100%;
-  height: 800px;
+  /* animation: fadeIn 0.9s ease-in-out; */
+  width: 40%;
+  height: 600px;
+ 
 
 }
 
 
 .Title1 h1,.Title2 h1,.Title3 h1{
   font-size: 2em;
-  text-align: center;
-  padding: 25px;
-  padding-top: 35px;
   color: #000000;
   border-radius: 15px;
   background: rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
+  /* animation: fadeIn 1.5s ease-in-out; */
   width: 100%;
   height: 15%;
+  display: grid;
+  place-items: center;
 }
 
 .Title1 p,.Title2 p ,.Title3 p{
+  font-family: "e-ukrL";
   line-height: 1.4;
-  font-size: 25px;
-  text-align: center;
+  font-size: 22px;
+  text-align: left;
   padding: 30px;
   border-radius: 15px;
   background: rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 1.5s ease-in-out;
+  /* animation: fadeIn 1.5s ease-in-out; */
   width: 100%;
   height: 75%;
   
 }
 
-.Developer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 300px;
- 
-}
-.Developer h1 {
-  font-size: 2em;
-  text-align: center;
-  padding: 25px;
-  padding-top: 35px;
-  color: #000000;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 15%;
-}
-.Developer p {
-  font-size: 2em;
-  text-align: center;
-  padding: 25px;
-  padding-top: 35px;
-  color: #000000;
-  border-radius: 15px;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  animation: fadeIn 1.5s ease-in-out;
-  width: 100%;
-  height: 15%;
-}
+
 
 /* Декоративні елементи */
 /* .Title1:hover {
@@ -228,15 +94,258 @@ body {
       transform: translateY(0);
   }
 }
-/* body::before {
-  content: "";
+
+
+.alltext{
+  font-family: "e-ukr";
+  margin-left: 30px;
+  margin-right: 15px;
+  
+}
+
+.rl{
+  display: grid;
+  place-items: center;
+ margin-top: 70px;
+}
+.rl a{
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.2rem;  
+  background-color: hwb(34 0% 1%);
+  border-radius: 8px;
+  display: grid;
+  place-items: center;
+  width: 250px;
+  height:50px;
+  
+  
+}
+
+.rl a:hover{
+  background-color: rgb(230, 130, 0);
+  transition: 0.2s ease-in-out;
+}
+
+
+.step{
+position: relative;  
+}
+.step h1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+
+}
+.steptext{
+
+  text-align: center;
+  width: 55%;
+  margin: 0 auto;
+  line-height: 1.9;
+  font-size: large;
+  
+}
+
+.dog {
+position: relative;   
+}
+.dog img{
+position: absolute;
+left: -100px;
+top: -280px
+
+}
+
+.paw{
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  filter: blur(8px);
-  z-index: -1;
-  opacity: 0.7;
-} */
+  top: 680px;
+  left: 100px;
+  transform: rotate(30deg); 
+}
+
+.paw img{
+  width: 120px;
+  height: 120px;
+}
+
+.paw1{
+  position: absolute;
+  top: 730px;
+  left: -30px;
+  transform: rotate(30deg); 
+}
+
+.paw1 img{
+  width: 120px;
+  height: 120px;
+}
+
+
+.paw2{
+  position: absolute;
+  top: 100px;
+  left: 1370px;
+  transform: rotate(-150deg); 
+  
+}
+
+.paw2 img{
+  width: 120px;
+  height: 120px;
+}
+
+
+.paw3{
+  position: absolute;
+  top: 50px;
+  left: 1470px;
+  transform: rotate(-150deg); 
+
+}
+
+.paw3 img{
+  width: 120px;
+  height: 120px;
+   
+}
+
+.cat{
+position: absolute;
+top: 270px;
+left: 880px;
+}
+.cat img{
+  width: 350px;
+  height: 200px;
+  margin-top: -20px;
+}
+
+.list{
+  margin-bottom: 100px;
+  
+}
+.list h1{
+ text-align: center;
+ margin-bottom: 15px;
+ 
+}
+.listtext{
+  text-align: center;
+
+}
+.listtext ol {
+  padding-left: 0;
+  list-style-position: inside;
+
+}
+.listtext ol li{
+  margin: 10px 0;
+  font-size: large;
+}
+
+.how{
+margin-bottom: 100px;
+}
+.how h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  margin-bottom: 10px;
+}
+.howtext{
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+  line-height: 0.8cm;
+  font-size: large;
+}
+.find{
+width: 60%; /* Ширина блоку */
+margin: 0 auto; /* Центрування по горизонталі */
+text-align: left; /* Текст вирівняний ліворуч */
+margin-bottom: 200px;
+margin-top: 50px;
+}
+
+.find h1{
+  margin-bottom: 10px;
+}
+.textfind{
+  font-family: 'e-ukrL';
+  line-height: 0.9cm;
+  margin-bottom: 15px;
+  font-size: x-large;
+  
+}
+
+.textfind1{
+  font-family: 'e-ukrL';
+  line-height: 0.9cm;
+  font-size: x-large;
+}
+
+.Dev{
+  /* margin-top: -150px; */
+  display: flex;
+}
+.devtitle h1{
+  margin-top: -150px;
+  display: grid;
+  place-items: center;
+  margin-bottom: 40px;
+}
+.Dev1{
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
+  display: grid;
+  place-items: center;
+  max-height: 500px;
+  max-width:  20%;
+  margin-left: 90px;
+  margin-bottom: 20px;
+  font-family: 'e-ukrL';
+  font-size: small;
+}
+.Dev1 .AB{max-width: 70%; max-height: 60%; border-radius: 10px; margin-top: -30px;}
+.Dev1 ,.name, .job{display: grid; place-items: center;}
+.name{ margin-top: -70px;}
+.job{ margin-top: -20px; margin-bottom: 10px;}
+
+.contactu{
+  display: grid;
+  place-items: center;
+  /* max-height: 100px;
+  max-width: 20%; */
+  /* background-color: rgb(255, 0, 0); */
+  margin: auto 50px;
+  border-radius: 30px
+}
+
+.contactu ol{
+   display: flex; 
+  list-style-type: none;
+}
+  /* .contactu img{
+    width: 65px;
+    height: 65px;
+  } */
+   
+.git{
+  width: 57px;
+  height: 57px;
+  margin-right: 20px;
+}
+.tel{
+  width: 59px;
+  height: 59px;
+  margin-left: 20px;
+}
+
+
 
