--- a/src/frontend/src/app/sing-in/sing-in.component.html
+++ b/src/frontend/src/app/sing-in/sing-in.component.html
@@ -2,9 +2,12 @@
   <div class="Costumer_Sing_In">
     <h2>Увійти</h2>
     <form (ngSubmit)="login()" class="login-form">
-      <input type="text" class="te" id="username" [(ngModel)]="email" name="email" placeholder="Почта" required>
-      <input type="password" class="p" id="password" [(ngModel)]="password" name="password" placeholder="Пароль" required>
-      <button type="submit" class="En">Увійти</button>
+      <label for="email">Електронна пошта:</label>
+      <input type="text" class="te" id="username" [(ngModel)]="email" name="email"  required>
+
+      <label for="password">Пароль:</label>
+      <input type="password" class="p" id="password" [(ngModel)]="password" name="password"  required>
+      <button type="submit" class="En">Вхід</button>
     </form>
     <p class="register-link">Ще немає акаунту? <a href="/regest">Зареєструватися</a></p>
     <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
