--- a/src/frontend/src/app/about/about.component.css
+++ b/src/frontend/src/app/about/about.component.css
@@ -17,7 +17,7 @@ overflow-x: hidden;
 
 
 .allTitle{
-  margin: 240px auto;
+  margin: 20px auto;
   /* display: flex; */
   
 }
@@ -119,6 +119,7 @@ overflow-x: hidden;
   place-items: center;
   width: 250px;
   height:50px;
+  /* margin-bottom: 30px; */
   
   
 }
@@ -146,6 +147,7 @@ position: relative;
   margin: 0 auto;
   line-height: 1.9;
   font-size: large;
+  /* margin-bottom: 30px; */
   
 }
 
@@ -291,17 +293,17 @@ margin-top: 50px;
 }
 
 .Dev{
-  /* margin-top: -150px; */
   display: flex;
+  margin-top:1cm;
 }
 .devtitle h1{
-  margin-top: -150px;
+  margin-top: 7cm;
   display: grid;
   place-items: center;
   margin-bottom: 40px;
 }
 .Dev1{
-  background: rgba(255, 255, 255, 0.1);
+  background: hsla(0, 0%, 100%, 0.1);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   border-radius: 30px;
   display: grid;
