--- a/src/frontend/src/app/regest/regest.component.css
+++ b/src/frontend/src/app/regest/regest.component.css
@@ -4,18 +4,17 @@
 
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: "e-ukr";
   background-color: #f4f4f4;
   height: 100vh; /* Займає всю висоту екрана */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
 }
 
 .container {
+  font-family: "e-ukr";
   width: 100%;
-  max-width: 400px; /* Максимальна ширина контейнера */
-  margin: 0 auto; /* Центруємо контейнер по горизонталі */
+  max-width: 500px; /* Максимальна ширина контейнера */
+  margin: 75px auto; /* Центруємо контейнер по горизонталі */
 }
 
 .form-container {
@@ -25,13 +24,13 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   animation: fadeIn 0.5s ease-in-out; /* Додаємо анімацію появи */
   display: flex;
-  flex-direction: column; /* Використовуємо flex для вертикального розташування */
-  align-items: center; /* Вирівнюємо по центру */
+  flex-direction: column; 
+  align-items: center; 
 }
 
 h2 {
-  margin-bottom: 1rem;
-  text-align: center;
+  margin-bottom: 2rem;
+  text-align: left;
   color: #333;
 }
 
@@ -41,14 +40,17 @@ h2 {
 }
 
 label {
+  font-family: "e-ukrL";
+  font-size: 0.9rem;
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
   color: #555;
 }
 
 input {
+ 
   width: 100%;
-  padding: 0.5rem;
+  padding: 0.3rem;
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: border 0.3s;
@@ -61,17 +63,19 @@ input:focus {
 
 .btn {
   width: 100%;
-  padding: 0.5rem;
-  background-color: #007bff;
+  padding: 0.3rem;
+  background-color: #fc8f00;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-top: 15px;
+  margin-bottom: -5px;
 }
 
 .btn:hover {
-  background-color: #0056b3;
+  background-color: #df7f00;
 }
 
 .error {
@@ -81,8 +85,10 @@ input:focus {
 }
 
 .login-link {
+  font-family: "e-ukrL";
   text-align: center;
   margin-top: 1rem;
+  font-size: 0.9rem;
 }
 
 .spinner {
