--- a/src/frontend/src/app/blog-and-news/blog-and-news.component.html
+++ b/src/frontend/src/app/blog-and-news/blog-and-news.component.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="Blog">
-  <h1>Блог</h1>
+  <!-- <h1>Блог</h1> -->
   <h2>"Як обрати свого майбутнього друга в притулку?"</h2>
   <p>Вибір домашнього улюбленця – відповідальний крок, який потребує серйозного підходу.
     В притулках на вас чекає чимало тварин, кожна з яких має унікальну історію та потреби.
@@ -21,7 +21,7 @@
 </div>
 
 <div class="News">
-  <h1>Новини</h1>
+  <!-- <h1>Новини</h1> -->
   <h2> Нове прибуття котиків та песиків у наш притулок! </h2>
   <p>
     Цього тижня до нашого притулку приїхало понад 10 тварин із різних місць.
@@ -38,6 +38,22 @@
     Учасники можуть забрати тварину на вихідні, провести з нею час та допомогти в адаптації до життя в сім'ї.
     Це чудова можливість спробувати себе в ролі господаря та, можливо, знайти свого майбутнього друга. </p>
 
+</div>
+
+<div class="paw">
+  <img src="paw.png" alt="paw">
+</div>
+
+<div class="paw1">
+  <img src="paw.png" alt="paw"  >
+</div>
+
+<div class="paw2">
+  <img src="paw.png" alt="paw">
+</div>
+
+<div class="paw3">
+  <img src="paw.png" alt="paw">
 </div>
 
 </body>
