--- a/src/frontend/src/app/about/about.component.css
+++ b/src/frontend/src/app/about/about.component.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100%;
   /* font-family:'e-ukr'; */
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   color: #333;
 position: relative;
 overflow-x: hidden;
