--- a/src/frontend/src/app/adopt/adopt.component.html
+++ b/src/frontend/src/app/adopt/adopt.component.html
@@ -9,24 +9,24 @@
     <div class="adaption-form">
 
         <h1>Форма заявки на усиновлення тварини</h1>
-        <form method="POST" action="" class="adopt"> 
+        <form (ngSubmit)="FormAdopt()" class="adopt"> 
          <label for="name">Ваше ім'я:</label>
-         <input type="text" id="name" name="name" placeholder="Введіть ваше ім'я" required>
+         <input type="text" id="name" [(ngModel)]="name"  name="name" placeholder="Введіть ваше ім'я" required>
    
          <label for="surname">Ваше прізвище:</label>
-         <input type="text" id="surname" name="surname" placeholder="Введіть ваше прізвище" required>
+         <input type="text" id="surname" [(ngModel)]="surname"  name="surname" placeholder="Введіть ваше прізвище" required>
    
          <label for="email">Email:</label>
-         <input type="email" id="email" name="email" placeholder="Введіть ваш email" required>
+         <input type="email" id="email" [(ngModel)]="email"  name="email" placeholder="Введіть ваш email" required>
    
          <label for="phone">Телефон:</label>
-         <input type="tel" id="phone" name="phone" placeholder="Введіть ваш номер телефону" required>
+         <input type="tel" id="phone" [(ngModel)]="phone"   name="phone" placeholder="Введіть ваш номер телефону" required>
 
          <label for="">ПРитулок</label>
-    <input type="tel" id="phone" name="phone" placeholder="" required>
+    <input type="tel" id="shelter"  [(ngModel)]="shelter" name="shelter" placeholder="" required>
    
          <label for="animal">Яку тварину ви хочете усиновити:</label>
-         <select id="animal" name="animal" required>
+         <select id="animal" [(ngModel)]="animal"  name="animal" required>
            <option value="">Виберіть тварину</option>
            <option value="cat">Кіт</option>
            <option value="dog">Пес</option>
@@ -34,7 +34,7 @@
          </select>
    
          <label for="exp">Чи маєте досвід догляду за тваринами?</label>
-          <select id="exp" name="exp" required>
+          <select id="exp" [(ngModel)]="exp"  name="exp" required>
            <option value="">Маєте досвід догляду за тваринами?</option>
            <option value="yes">Так</option>
            <option value="no">Ні</option>
