--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -103,6 +103,7 @@ nav ul li .Registr_pc:hover {
     justify-content: center;
     align-items: center;
     height: auto;
+    margin-bottom: 40px;
 }
 
 .map-container ul {
@@ -112,6 +113,44 @@ nav ul li .Registr_pc:hover {
 
 .map-container li {
     text-align: center;
+}
+
+.findshelter{
+  width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ margin-bottom: 40px;
+
+}
+.findshelter input{
+  margin-right: 20px;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px; 
+  border-radius: 10px; 
+  width: 20%;
+}
+
+.findshelter button{
+  font-family: 'e-ukr';
+  margin-left: 20px;
+  background-color: #fc8f00;
+  border: #fc8f00;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.findshelter button:hover{
+ 
+  background-color: #e28000;
+  border: #e28000;
+  color: #ffffff;
+  border-radius: 10px;
+  transition: 0.2s ease-in-out;
 }
 
 
