--- a/src/frontend/src/app/blog-and-news/blog-and-news.component.css
+++ b/src/frontend/src/app/blog-and-news/blog-and-news.component.css
@@ -9,80 +9,70 @@ body{
     height: 100%;
     background: linear-gradient(135deg, #ffffff, #f2f2f2);
     font-family: "e-ukr";
+    padding: 40px;
+    
+
   }
 
 .Blog {
-  padding: 40px;
-  background: rgba(255, 255, 255, 0.1);
+  /* background: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
-  animation: slideIN 1s  ease-in-out;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2); */
+  /* animation: slideIN 1s  ease-in-out; */
+ 
 }
 
-.Blog h1{
-  background: rgba(0, 0, 0, 0.1);
-  border-radius: 15px;
-  text-align:  center;
-  padding: 10px 20px 20px 20px;
-  margin-bottom: 20px;
-  
-}
 
 .Blog h2{
  margin-bottom: 20px;
- background: rgba(0, 0, 0, 0.1);
- border-radius: 15px;
+ /* background: rgba(0, 0, 0, 0.1);
+ border-radius: 15px; */
  padding-bottom: 5px;
  padding-left: 10px;
+ text-align: center;
 }
 
 
 
 .Blog p{
-  
+   /* background: rgba(0, 0, 0, 0.1);
+    border-radius: 15px; */
     font-size: large;
     line-height: 1.8;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    padding-left: 10px;
+    /* margin-bottom: 50px; */
+    width: 80%;
+    text-align:justify;
+    margin: 40px auto;
 }
 
 .News {
-  padding: 40px;
-  background: rgba(255, 255, 255, 0.1);
+ 
+  /* background: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-  animation: slideIN1 1s  ease-in-out;
-  
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); */
+  /* animation: slideIN1 1s  ease-in-out; */  
 }
 
-.News h1{
-  background: rgba(0, 0, 0, 0.1);
-    text-align:  center;
-    padding: 10px 20px 20px 20px;
-    border-radius: 15px;
-    margin-bottom: 20px;
-    
-}
 
 
 .News h2{
-  background: rgba(0, 0, 0, 0.1);
-  border-radius: 15px;
-  padding-left: 10px;
+  /* background: rgba(0, 0, 0, 0.1);
+  border-radius: 15px; */
     margin-bottom: 20px;
+    text-align: center;
 }
 
 
   
   .News p{
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    padding-left: 10px;
+    /* background: rgba(0, 0, 0, 0.1);
+    border-radius: 15px; */
     font-size: large;
-  
   line-height: 1.8;
-  margin-bottom: 20px;
+  text-align: center;
+  width: 80%;
+  margin: 40px auto;
+  /* margin-bottom: 50px; */
   
   }
 
@@ -95,3 +85,72 @@ body{
     0% { transform: translateX(40%); opacity: 0; }
     100% { transform: translateX(0); opacity: 1; }
   }
+
+  .paw{
+    position: absolute;
+    top: 780px;
+    left: 100px;
+    transform: rotate(30deg); 
+  }
+  
+  .paw img{
+    width: 120px;
+    height: 120px;
+  }
+  
+  .paw1{
+    position: absolute;
+    top: 830px;
+    left: -30px;
+    transform: rotate(30deg); 
+  }
+  
+  .paw1 img{
+    width: 120px;
+    height: 120px;
+  }
+  
+  .paw2{
+    position: absolute;
+    top: 200px;
+    left: 1370px;
+    transform: rotate(-150deg); 
+    
+  }
+  
+  .paw2 img{
+    width: 120px;
+    height: 120px;
+  }
+  
+  
+  .paw3{
+    position: absolute;
+    top: 80px;
+    left: 1440px;
+    transform: rotate(-150deg); 
+  
+  }
+  
+  .paw3 img{
+    width: 120px;
+    height: 120px;
+     
+  }
+
+  /* .Blog h1{
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  text-align:  center;
+  padding: 10px 20px 20px 20px;
+  margin-bottom: 20px;
+  
+} */
+/* .News h1{
+  background: rgba(0, 0, 0, 0.1);
+    text-align:  center;
+    padding: 10px 20px 20px 20px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    
+} */
