--- a/src/frontend/src/app/donate/donate.component.css
+++ b/src/frontend/src/app/donate/donate.component.css
@@ -150,3 +150,113 @@ body {
 .Prozoro p{
    font-size: larger;
 }
+
+/* Container for Shelters */
+.shelters-container {
+  padding: 20px;
+}
+.shelters-container .shelter-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.shelters-container h2 {
+ margin-bottom: 30px;
+  text-align: center;
+}
+
+.shelter-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  
+}
+
+.shelter-card {
+  width: 250px;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.2s, background-color 0.3s;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  background-color: #f9f9f9;
+  position: relative;
+}
+
+.shelter-card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px 8px 0 0;
+}
+
+.shelter-card:hover {
+  transform: scale(1.05);
+  background-color: #eaeaea;
+}
+
+.shelter-card h3 {
+  font-size: 18px;
+  color: #222;
+  margin-top: 10px;
+}
+
+.shelter-card p {
+  font-size: 14px;
+  color: #555;
+  margin: 5px 0;
+}
+
+/* Modal Styling */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  text-align: left;
+  position: relative;
+}
+
+.modal-content h2 {
+  font-size: 22px;
+  color: #333;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.modal-content img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.modal-content p {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.close-button {
+  cursor: pointer;
+  font-size: 28px;
+  color: #333;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
