--- a/src/frontend/src/app/donate/donate.component.html
+++ b/src/frontend/src/app/donate/donate.component.html
@@ -9,18 +9,34 @@
 </head>
 <body>
 
-  
-  <!-- <div class="container">
-    <input type="text" id="name" name="name" placeholder="Введіть назву притулка">
-    <button class="Don">Задонатити</button>
-  </div> -->
-
- 
-  <div class="card">
-    <form action="" method="post" class="card-form">
-        
-    </form>
+  <div class="shelters-container">
+    <h2>Притулки</h2>
+    <div class="shelter-cards">
+      <div *ngFor="let shelter of shelters"
+           class="shelter-card"
+           (click)="selectShelter(shelter)">
+        <img [src]="shelter.imageURL" alt="{{ shelter.city }}" />
+        <h3>Місто: {{ shelter.city }}</h3>
+        <p>ID: {{ shelter.id }}</p>
+        <p>Адреса: {{ shelter.address }}</p>
+        <p>Телефон: {{ shelter.contact_number }}</p>
+      </div>
+    </div>
   </div>
+  
+  <!-- Модальне вікно для детальної інформації про притулок -->
+  <div *ngIf="selectedShelter" class="modal">
+    <div class="modal-content">
+      <span (click)="closeModal()" class="close-button">&times;</span>
+      <h2>Притулок у {{ selectedShelter.city }}</h2>
+      <img [src]="selectedShelter.imageURL" alt="{{ selectedShelter.city }}" />
+      <p>ID: {{ selectedShelter.id }}</p>
+      <p>Адреса: {{ selectedShelter.address }}</p>
+      <p>Телефон: {{ selectedShelter.contact_number }}</p>
+      <p>Опис: {{ selectedShelter.description }}</p>
+    </div>
+  </div>
+  
 
   <div class="Prozoro">
     <h1>Всі перекази притулкам є прозорими</h1>
