--- a/src/frontend/src/app/find-f/find-f.component.css
+++ b/src/frontend/src/app/find-f/find-f.component.css
@@ -1,11 +1,28 @@
+body{
+  font-family: 'e-ukr ';
+}
 .animals-container {
   padding: 20px;
+}
+.animals-container h2 {
+ display: flex;
+ justify-content: center;
+ margin-bottom: 35px;
+}
+.animals-container .pagination {
+  margin: 25px auto;
+}
+
+.animals-container .animal-cards {
+  display:flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
 .animal-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 75px;
 }
 
 .animal-card {
@@ -30,6 +47,14 @@
 
 .pagination {
   margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 25%;
+  
+}
+.previous, .next {
+  margin-top: 13px;
 }
 
 .modal {
@@ -42,6 +67,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .modal-content {
@@ -57,3 +83,97 @@
   float: right;
   font-size: 28px;
 }
+
+.buttonForAdoptAndWard {
+ display: flex;
+ justify-content: space-evenly;
+ align-items: center;
+ 
+}
+
+.modalAdopt{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+.adopt-content h1{
+  text-align: center;
+  line-height: 1.5cm;   
+}
+.adopt-content{
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px; 
+  text-align: center;
+}
+.adopt{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.modalWard{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.ward-content{
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+}
+.ward-content h1{
+  text-align: center;
+  line-height: 1.5cm;   
+}
+
+.ward{
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+input, select,  button {
+    margin-bottom: 15px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+button{
+    color: #ffffff;
+    background-color: #fc8f00
+    
+}
+button:hover{
+    background-color: #d97b00;
+    transition: 0.2s ease-in-out;
+    
+}
+
+/* .Adoptbtn {
+
+}
+.Wardbtn {
+
+} */
