--- a/src/frontend/src/app/free-people/free-people.component.css
+++ b/src/frontend/src/app/free-people/free-people.component.css
@@ -45,6 +45,13 @@ label{
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+button{
+    color: #ffffff;
+    background-color: #fc8f00
+    
+}
 button:hover{
-    background-color: #b5b5b5;
+    background-color: #d97b00;
+    transition: 0.2s ease-in-out;
+    
 }
