--- a/src/frontend/src/app/free-people/free-people.component.html
+++ b/src/frontend/src/app/free-people/free-people.component.html
@@ -8,10 +8,10 @@
 
 </head>
 <body>
- 
+
  <div class="volonter">
   <form class="formvolonter" (ngSubmit)="Volonter()">
-    <h1>Форма заявки на волонтером</h1>
+    <h1>Форма заявки на волонтерство</h1>
     <label for="name">Ваше ім'я:</label>
     <input type="text" id="name" [(ngModel)]="name" name="name" placeholder="Введіть ваше ім'я" required>
 
